<resources>
    <string name="app_name" translatable="false">Hawking</string>
    <string name="app_name_title">Hawking</string>
    <string name="TypeHint" translatable="false">Type your message</string>
    <string name="recognize_title">Recognition</string>
    <string name="title_talk_mode_btn_on">turn on Talk mode</string>
    <string name="title_talk_mode_btn_off">turn off Talk mode</string>
    <string name="title_talk_mode_is_on">Talk mode is on</string>
    <string name="title_talk_mode_is_off">Talk mode is off</string>
    <string name="my_message_hint">Type</string>
    <string name="send_message_btn">Send - </string>
    <string name="my_message_disc">I said </string>
    <string name="thier_message_disc">Recorded -</string>
    <string name="read_check_disc">Next</string>
    <string name="location_failed">Trying to connect</string>
    <string name="audio_needed_title">Audio permission is needed</string>
    <string name="audio_needed_summary">Speech Recognition need this permission. Conversation transcripts stay secure on your device</string>
    <string name="audio_needed_ok">OK</string>
    <string name="train_mode">Train mode</string>
    <string name="train_mode_on">Turn on train mode</string>
    <string name="train_mode_off">Turn off train mode</string>
    <string name="record">record</string>
    <string name="promot_stt">recording :</string>
    <string name="error">Error</string>
    <string name="stopped">stopped - </string>
    <string name="system_offline">offline</string>
    <string name="system_missing_language">Missing language, Download TTS Engine</string>
    <string name="system_train_mode">offline or no gps</string>
    <string name="system_SST_error">recording error - try again</string>
    <string name="system">"System-  "</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_general">General</string>
    <string name="pref_title_fontsize">Chat text size</string>
    <string name="key_font_seekbar" translatable="false">key_font_seekbar</string>
    <string name="pref_title_increase">Increase font size in chat</string>
    <string name="key_increase_font_size" translatable="false">key_increase_font_size</string>
    <string name="summary_increase">Tap to increase the font size in chat</string>
    <string name="pref_title_decrease">Decrease font size in chat</string>
    <string name="summary_decrease">Tap to decrease the font size in chat</string>
    <string name="key_decrease_font_size" translatable="false">key_decrease_font_size</string>
    <string name="pref_title_bold">Bold text</string>
    <string name="summary_bold">Make the text in chat bold</string>
    <string name="key_bold" translatable="false">key_bold</string>
    <string name="increase_font"> + Font size increase to </string>
    <string name="decrease_font"> - Font size decrease to </string>
    <string name="warning_font">Font size too small !</string>
    <string name="pref_title_myname">Your name</string>
    <string name="summary_myname">Type your name</string>
    <string name="key_myname" translatable="false">key_myname</string>
    <string name="pref_title_dark_mode">Night Theme</string>
    <string name="summary_dark_mode">Change the contrast of text and background</string>
    <string name="key_dark_mode" translatable="false">key_dark_mode</string>
    <string name="pref_title_stt">Speech to Text</string>
    <string name="title_stt_promoting">Voice promoting</string>
    <string name="summary_stt_promoting">For example speech recognition will start with the device speak  &quot; recording &quot;</string>
    <string name="key_allow_promoting" translatable="false">key_allow_promoting</string>
    <string name="title_train_mode_enable">Enable train mode</string>
    <string name="summary_train_mode_enable">Enable train mode to appear in the top bar of the app</string>
    <string name="key_train_mode_enable" translatable="false">key_train_mode_enable</string>
    <string name="title_talk_mode_enable">Enable talk mode</string>
    <string name="summary_talk_mode_enable">Enable talk mode to appear in the top bar of the app</string>
    <string name="key_talk_mode_enable" translatable="false">key_talk_mode_enable</string>
    <string name="title_language_stt">STT Language</string>
    <string name="summary_language_stt">Choose the recognize speech language</string>
    <string name="key_language_stt" translatable="false">key_language_stt</string>
    <string name="title_settings_link_stt">STT Device Settings</string>
    <string name="summary_settings_link_stt">Open STT engine settings of your device</string>
    <string name="key_settings_link_stt" translatable="false">key_settings_link_stt</string>
    <string name="title_enable_auto_scroll">Braille keyboard autoscroll</string>
    <string name="summary_enable_auto_scroll">Enable auto focused on new SST mesages</string>
    <string name="key_enable_auto_scroll" translatable="false">key_enable_auto_scroll</string>
    <string name="pref_title_tts">Text to Speech</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_vibrate">Enable Vibrate</string>
    <string name="summary_vibrate">Vibrate on each new speech</string>
    <string name="key_vibrate" translatable="false">key_vibrate</string>
    <string name="title_tts_enable">Enable TTS</string>
    <string name="summary_tts_enable">Enable Text to Speech</string>
    <string name="key_tts_enable" translatable="false">key_tts_enable</string>
    <string name="title_max_volume">Max volume adjusting</string>
    <string name="summary_max_volume">Ensure max volume when speaking your message</string>
    <string name="key_max_volume" translatable="false">key_max_volume</string>
    <string name="title_repeat_enable">Repeat on Empty</string>
    <string name="summary_repeat_enable">Repeat the last message when sending empty message</string>
    <string name="key_repeat_enable" translatable="false">key_repeat_enable</string>
    <string name="title_repeat_longpress">Long-press repeat</string>
    <string name="summary_repeat_longpress">Repeat the message when long-press it</string>
    <string name="key_repeat_longpress" translatable="false">key_repeat_longpress</string>
    <string name="title_presave_subscreen">Pre-saved sentences</string>
    <string name="summary_presave_subscreen">Launch with dedicated keys</string>
    <string name="title_presave_dialog">Save a new sentence</string>
    <string name="title_language_tts">TTS Language</string>
    <string name="summary_language_tts">Choose the Text-To-Speak language</string>
    <string name="key_language_tts" translatable="false">key_language_tts</string>
    <string name="title_settings_link_tts">TTS Device Settings</string>
    <string name="summary_settings_link_tts">Open TTS engine settings of your device</string>
    <string name="key_settings_link_tts" translatable="false">key_settings_link_tts</string>
    <string name="pref_title_subscreen">About pre-save sentences</string>
    <string name="title_presave_button_current">Current shortcut template</string>
    <string name="title_presave_button">Set the shortcut template</string>
    <string name="summary_presave_button">With the template you can use the shortcuts. For e.g.: template "'"a"'" will launch sentence1 when entered "'"a1"'"</string>
    <string name="title_presave_button_content">a</string>
    <string name="title_presave_button_dialog">Enter new template in English</string>
    <string name="key_presave" translatable="false">key_presave</string>
    <string name="title_presave_1">Sentence 1</string>
    <string name="summary_presave_1">Hello, The device will speak what I will write, please wait for the beep to speak</string>
    <string name="title_presave_2">Sentence 2</string>
    <string name="summary_presave_2">Empty</string>
    <string name="title_presave_3">Sentence 3</string>
    <string name="summary_presave_3">Empty</string>
    <string name="title_presave_4">Sentence 4</string>
    <string name="summary_presave_4">Empty</string>
    <string name="title_presave_5">Sentence 5</string>
    <string name="summary_presave_5">Empty</string>
    <string name="no_such_shortcut">No such shortcut</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">Hawking was created to help people with struggle to communicate via a braille keyboard.
        This app is part of a final computer engineering project in ben-gurion university Israel, in collaboration with the deaf-blind center in Israel.</string>
    <string name="app_version" translatable="false">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="user_guide_eng">English User Guide</string>
    <string name="url_eng_guide" translatable="false">http://bit.do/HawkingUserGuide</string>
    <string name="user_guide_heb">Hebrew User Guide</string>
    <string name="url_heb_guide" translatable="false">http://bit.do/HawkingUserGuideHebrew</string>
    <string name="url_faq" translatable="false">https://hawkingbgu.wixsite.com/application</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy" translatable="false">https://hawkingbgu.wixsite.com/application</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms" translatable="false">https://hawkingbgu.wixsite.com/application</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="key_font_size" translatable="false">key_font_size</string>
    <string name="key_send_feedback" translatable="false">key_send_feedback</string>
    <string name="offline_stt_warning">Hebrew Speech Recognition is unavailable in offline mode !</string>
    <string name="missing_tts_warning">TTS engine connection in Hebrew is not fully set up</string>
    <string name="en_tag" translatable="false">en-US</string>
    <string name="he_tag" translatable="false">he-IL</string>
    <string name="title_activity_introduction" translatable="false">IntroductionActivity</string>
    <string name="ob_header0">Welcome to Hawking !</string>
    <string name="ob_header1">Text To Speech</string>
    <string name="ob_header2">Speech To Text</string>
    <string name="ob_header3">Bluetooth Connection</string>
    <string name="ob_header4">Train mode</string>
    <string name="ob_get_started">GET STARTED</string>
    <string name="ob_desc0">User guides in Hebrew &amp; English available in the app settings</string>
    <string name="ob_desc1">Speak messages on your behalf with appropriate accessibility indications</string>
    <string name="popup_title_STT">Offline</string>
    <string name="popup_description_STT">You appeared to be offline. Try to add the chosen STT language in the device Offline Speech Recognition settings.</string>
    <string name="popup_btn_close">Try again</string>
    <string name="popup_btn_setting">device settings</string>
    <string name="popup_title_TTS">Missing language</string>
    <string name="popup_description_TTS">Missing language in the Text-To-Speech Engine settings. For Hebrew install Vocalizer TTS app.</string>
    <string name="popup_btn_app_link">Download TTS Engine</string>
    <string name="popup_title_train_mode">Location unavailable</string>
    <string name="popup_description_train_mode">Train mode requires GPS or Internet connection. Please try to enable GPS or connect to a Network.</string>
    <string name="popup_btn_gps">GPS settings</string>
</resources>