<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/popup_layout"
    android:background="?colorPopUpBackground"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/popup_icon"
            android:importantForAccessibility="no"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/nowifi_icon_popup" />

        <TextView
            android:id="@+id/popup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingLeft="@dimen/ob_desc_padding"
            android:paddingRight="@dimen/ob_desc_padding"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/popup_title_STT"
            android:textColor="?colorPopUpText"
            android:textSize="@dimen/ob_header_text_size" />

        <TextView
            android:id="@+id/popup_description1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:paddingLeft="@dimen/ob_desc_padding"
            android:paddingRight="@dimen/ob_desc_padding"
            android:text="@string/popup_description_STT"
            android:textColor="?colorPopUpText"
            android:textSize="16sp" />

        <Button
            android:id="@+id/popup_btn_settings_STT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="10dp"
            android:textColor="?colorPopUpText"
            android:text="@string/popup_btn_setting"
            android:drawableStart="@drawable/settings_icon_popup"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/popup_btn_close"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="45dp"
            android:layout_height="90dp"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:background="?colorMyMessage"
            android:text="@string/popup_btn_close"
            android:textAllCaps="true"
            android:textColor="?colorPopUpText"
            android:textSize="@dimen/button_text" />

    </LinearLayout>
</RelativeLayout>